assets/css/main.css
/* ... */
		#footer a {
			color: #fff;
			text-shadow: 0 0 0.5px rgba(255, 255, 255, 0.25);
			border-bottom-color: rgba(255, 255, 255, 0.5);
		}

			#footer a:hover {
				color: lightgrey;
				text-shadow: 0 0 0.5px rgba(69, 200, 159, 0.25);
				border-bottom-color: rgba(53, 184, 143, 0.5);
			}

		#footer .icons {
			padding: 0.75em 2em 0.75em 2em;
			border-radius: 3em;
			border: solid 1px #fff;
			display: inline-block;
			margin: 0 0 3em 0;
		}

		#footer .copyright {
			margin: 0 0 9em 0;
			font-size: 0.8em;
		}

/* Poptrox */

	.poptrox-popup {
		-moz-box-sizing: content-box;
		-webkit-box-sizing: content-box;
		-ms-box-sizing: content-box;
		box-sizing: content-box;
		background: #fff;
		padding-bottom: 3em;
	}

		.poptrox-popup .loader {
			width: 48px;
			height: 48px;
			background: url("images/loader.gif");
			position: absolute;
			top: 50%;
			left: 50%;
			margin: -24px 0 0 -24px;
		}

		.poptrox-popup .caption {
			position: absolute;
			bottom: 0;
			left: 0;
			background: #fff;
			width: 100%;
			height: 3em;
			line-height: 3em;
			text-align: center;
			cursor: default;
			z-index: 1;
		}

		.poptrox-popup .nav-next,
		.poptrox-popup .nav-previous {
			-moz-transition: opacity 0.5s ease-in-out;
			-webkit-transition: opacity 0.5s ease-in-out;
			-ms-transition: opacity 0.5s ease-in-out;
			transition: opacity 0.5s ease-in-out;
			position: absolute;
			top: 0;
			width: 50%;
			height: 100%;
			opacity: 0;
			cursor: pointer;
			background: rgba(0, 0, 0, 0.01);
			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
		}

			.poptrox-popup .nav-next:before,
			.poptrox-popup .nav-previous:before {
				content: '';
				position: absolute;
				width: 96px;
				height: 64px;
				background: url("images/poptrox-nav.svg");
				top: calc(50% - 1.5em);
				margin: -32px 0 0 0;
			}

		.poptrox-popup:hover .nav-next,
		.poptrox-popup:hover .nav-previous {
			opacity: 0.5;
		}

			.poptrox-popup:hover .nav-next:hover,
			.poptrox-popup:hover .nav-previous:hover {
				opacity: 1.0;
			}

		.poptrox-popup .nav-next {
			right: 0;
		}

			.poptrox-popup .nav-next:before {
				right: 0;
			}

		.poptrox-popup .nav-previous {
			left: 0;
		}

			.poptrox-popup .nav-previous:before {
				-moz-transform: scaleX(-1);
				-webkit-transform: scaleX(-1);
				-ms-transform: scaleX(-1);
				transform: scaleX(-1);
				left: 0;
				-ms-filter: "FlipH";
				filter: FlipH;
			}

		.poptrox-popup .closer {
			-moz-transition: opacity 0.5s ease-in-out;
			-webkit-transition: opacity 0.5s ease-in-out;
			-ms-transition: opacity 0.5s ease-in-out;
			transition: opacity 0.5s ease-in-out;
			position: absolute;
			top: 0;
			right: 0;
			width: 64px;
			height: 64px;
			text-indent: -9999px;
			z-index: 2;
			opacity: 0;
			-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
		}

			.poptrox-popup .closer:before {
				-moz-transition: background-color 0.5s ease-in-out;
				-webkit-transition: background-color 0.5s ease-in-out;
				-ms-transition: background-color 0.5s ease-in-out;
				transition: background-color 0.5s ease-in-out;
				content: '';
				display: block;
				position: absolute;
				right: 16px;
				top: 16px;
				width: 40px;
				height: 40px;
				border-radius: 100%;
				box-shadow: inset 0 0 0 1px #fff;
				background: rgba(255, 255, 255, 0.1) url("images/poptrox-closer.svg") center center;
				color: #fff !important;
			}

		.poptrox-popup:hover .closer {
			opacity: 0.5;
		}

			.poptrox-popup:hover .closer:hover {
				opacity: 1.0;
			}

/* FAQ */

	#faq ul {
		margin-top: 2em;
	}

	#faq li {
		list-style: none;
		margin-top: 1em;
	}

	#faq li b {
		font-weight: bold;
		margin-bottom: 0.5em;
		font-size: 1.25em;
		display: block;
	}

/* Speakers */

#speakers li {
	overflow: auto;
	margin-top: 2em;
}

#speakers li img {
	width: 20%;
	float: left;
	display: block;
}

#speakers li .info {
	width: 80%;
	float: left;
	display: block;
	padding-left: 1.5em;
}

#speakers li .info .name {
	font-size: 1.5em;
	font-family: 'caviar', sans-serif;
	text-transform: uppercase;
	margin-bottom: 0.5rem;
}

#speakers li .info .bio {
	font-size: 1rem;
	line-height: 1.5;
}

/* Wide */

	@media screen and (max-width: 1680px) {

		/* Basic */

			body, input, textarea, select {
				font-size: 16pt;
			}

	}

/* Normal */

	@media screen and (max-width: 1080px) {

		/* Banner */

			#banner {
				padding: 4em 0 4em 0;
				background-size: auto, 175% auto;
			}

	}
/* ... */

